package com.cagepa.painel.fachada_painel_cagepa.domain.enterprise.enums;

public enum TipoEndereco {
    RESIDENCIAL,
    COMERCIAL,
    INDUSTRIAL
}
