package com.cagepa.painel.fachada_painel_cagepa.domain.enums;

public enum StatusCliente {
    ATIVO,
    INATIVO,
    SUSPENSO
}
