package com.cagepa.painel.fachada_painel_cagepa.domain.enums;

public enum TipoCliente {
    RESIDENCIAL,
    COMERCIAL,
    INDUSTRIAL,
}
